Henter prosentandeler og legger til 0-verdier